Revision history for Perl extension IPC::System::Simple.

1.18  Sun Feb  8 19:09:15 AUSEDT 2009

        * BUGFIX: IPC::System::Simple should now compile cleanly
          under 5.6.0 and 5.6.1 (as well as 5.6.2+).  Many thanks
          to David Golden for spotting this bug.  (RT #43098)

        * DOCUMENTATION: "Advanced" is now spelt correctly under
          in the section "Advanced Usage".  Many thanks to
          Raymond Wan for spotting this typo.  (RT #42705)

1.17  Fri Dec 19 00:45:16 AUSEDT 2008
        * TEST: Tests to ensure that passing undefined values to
          systemx() do not produce malformed errors, but instead
          well-formed errors.  Many thanks to Nadim Khemir for
          spotting this.  RT #41149.

        * BUGFIX: Workaround for a bug under Perl 5.10 where on
          some platforms coredumps were not being reported in $?.
          Many thanks to the Debian Perl folks for finding this,
          particularly Gregor Herrmann.

        * TEST: Better diagnostics from t/08_core.t.

        * TEST: t/08_core.t now cleans up its core files after running.
          Thanks to Gregor Herrmann for spotting this.

        * TEST: t/08_core.t is now a main test, rather than an
          author-only test.

        * BUGFIX: Attempting to call an undefined command is now
          a fatal error.

        * VERSION: Since ISS is now very stable, and provides a
          significantly improved interface to the default system()
          command, the major version number has been incremented.

          There are no incompatible changes with previous version.
          The increment of the major version number is to indicate
          stability only.

0.16  Sun Sep 14 11:29:17 AUSEST 2008
        * DOCUMENTATION: Updated documentation on $EXITVAL to provide
          extra clarification.  Many thanks again to Elliot Shank
          for the feedback!

        * DOCUMENTATION: Noted that run() and system() are aliases for each